fix: properly align open collapse menu items

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -49,6 +49,10 @@ md-sidenav {
 
 md-menu-item {
   background: #eee;
+
+  > a {
+    display: flex !important;
+  }
 }
 
 md-collapse-menu-item {
